# axum-auth-api

./: .env.example  .gitignore  Cargo.toml  LICENSE_MIT  README.md
migrations/: data.surql
migrations/001-initial/: up.surql
src/: config.rs  error.rs  main.rs  router.rs  state.rs
src/api/: mod.rs
src/api/bearer_jwt/: login.rs  mod.rs  protected_content.rs
src/api/cookies_jwt/: login.rs  logout.rs  mod.rs  protected_content.rs
src/auth/: bearer_jwt.rs  cookie_jwt.rs  mod.rs
src/surreal/: connect_db.rs  errors.rs  migration.rs  mod.rs
